@@ -1,3 +1,11 @@
+2009-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* configure.ac: Updated autotools.  Autoconf 2.64, Automake 1.11,
+	libtool 2.2.6.  Enabled support for silent build rules
+	(--enable-silent-rules or 'make V=0') and colorized tests.
+
+	* html/{index.html, v3.9.0.html}: Update for 3.9.0 release.
+
 2009-06-30  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* tests/tiffcp-logluv.sh: minimal testing of sgilog compression.
